frontend/src/components/cashier/RightPane.css
.rightRect{
    position: relative;
    background-color: #748D92;
    height: 100%;
    width: 21%
}

.rightPaneContainer1-cash{
    height: 95.5%;
    width: 100%;
}

.orderNumberContainer-cash{
    height: 25.6%;
}

.orderNumber{
    position: relative;
    padding: 10%;
    font-size: 400%;
    text-align: center;
    color: white;
}

.separator {
    border: none; /* Remove default border */
    height: 0.3%; /* Height of the line */
    width: 85%;
    background-color: #5E5E5E; /* Color of the line */
    opacity: 48%;
    margin: 2% auto; /* Space above and below the line */
}

.orderItemRow{
    background-color: transparent;
    position:relative;
    display: flex;
    width: 100%;
    height: auto;
    padding: 1.5% 3%;
}

.orderItemRowText{
    background-color: transparent;
    border: none;
    position:relative;
    display: flex;
    width: 70%;
    height: auto;
    padding: 1.5% 3%;
    color: white;
    max-width: 80%;
}

.orderItemsText {
    width: 60%; /* Set maximum width for text */
    white-space: normal; /* Allow wrapping */
    overflow-wrap: break-word; /* Break long words if necessary */
    text-align: left; /* Align text to the left */
    display: flex; /* Use flexbox to align text and price */
    flex-direction: column; /* Stack text vertically */
    color: white;
}

.orderItemsPrice {
    display: flex; /* Use flexbox for the price */
    align-self: center; /* Align price to the start of the container */
    margin-left: 15%; /* Space between text and price */
    width: 10%;
}

.paidItemsText{
    width: 90%; /* Set maximum width for text */
    white-space: normal; /* Allow wrapping */
    overflow-wrap: break-word; /* Break long words if necessary */
    text-align: left; /* Align text to the left */
    display: flex; /* Use flexbox to align text and price */
    flex-direction: column; /* Stack text vertically */
    color: white;
}

.paidItemsPrice {
    display: flex; /* Use flexbox for the price */
    align-self: center; /* Align price to the start of the container */
    margin-left: 10%; /* Space between text and price */
    width: 10%;
}

.paidItemText{
    width: 100%;
    text-align: center;
    padding: 5%;
    color: blue;
}

.discountText{
    width: 100%;
    text-align: center;
    color: blue;
    font-size: 70%;
}

.editBtn{
    background-color: transparent;
    border: none;
    color: black;
    display: flex;
    align-self: center;
    width: 15%;
}

.editBtnIcon{
    width: 30%;
    height: 20%;
    padding: 0;
    margin: 0;
}

.orderItemX{
    background-color: transparent;
    border: none;
    color: red;
    /*width: 15%;*/
    margin-left: 5%;
}

.orderItemsContainer{
    height: 49.3%;
    overflow-y: scroll; /* Makes scroll bar always visible */
}

.priceContainer{
    padding: 7% 5% 0;
    color: white;
    height: 20%;
}

.subtotal{
    padding-bottom: 5%;
    font-size: 125%;
}

.tax{
    padding-bottom: 5%;
    font-size: 125%;
}

.total{
    font-size: 225%;
}

.pay{
    width: 100%;
    text-align: center;
    background-color:#212A31;
    color: white;
    height: 4.5%;
    border: 2px solid black;
}



/* For hiding scroll bars */
/*.orderItemsContainer::-webkit-scrollbar {*/
/*    display: none; !* Hide the scrollbar *!*/
/*}*/

/*!* For Firefox *!*/
/*.scrollable-container {*/
/*    scrollbar-width: none; !* Hide scrollbar in Firefox *!*/
/*}*/

